--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "files.associations": {
+        "philo.h": "c"
+    },
+    "norminette-vscode.enable": true,
+    "norminette-vscode.path": "norminette",
+    "norminette-vscode.ignore": [
+        "**/libft/**",
+        "**/minilibx/**"
+    ]
 }
